# Lite_Screen_Recorder

./: CMakeLists.txt
include/: ScreenRecorder.h
src/: ScreenRecorder.cpp  main.cpp
